--- a/src/SafeFileSystemWatcher/SafeFileSystemWatcher.csproj
+++ b/src/SafeFileSystemWatcher/SafeFileSystemWatcher.csproj
@@ -15,6 +15,9 @@
       <_Parameter1>Tests.$(MSBuildProjectName)</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+  </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>C:\Development\SafeFileSystemWatcher\src\SafeFileSystemWatcher\SafeFileSystemWatcher.xml</DocumentationFile>
