Remove xml documentation

--- a/src/SafeFileSystemWatcher/SafeFileSystemWatcher.csproj
+++ b/src/SafeFileSystemWatcher/SafeFileSystemWatcher.csproj
@@ -20,6 +20,6 @@
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Development\SafeFileSystemWatcher\src\SafeFileSystemWatcher\SafeFileSystemWatcher.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 </Project>
