--- a/src/SafeFileSystemWatcher/SafeFileSystemWatcher.csproj
+++ b/src/SafeFileSystemWatcher/SafeFileSystemWatcher.csproj
@@ -16,6 +16,10 @@
     </AssemblyAttribute>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="docfx.console" Version="2.43.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
