--- a/src/SafeFileSystemWatcher/toc.yml
+++ b/src/SafeFileSystemWatcher/toc.yml
@@ -1,5 +1,5 @@
 - name: Articles
   href: articles/
+  homepage: articles/getting_started.md
 - name: Api Documentation
-  href: api/
-  homepage: api/index.md
+  href: obj/api/
