--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,12 @@
 environment:
-    op_build_user: "OpenPublishBuild"
+    op_build_user: "Victor Procure"
     op_build_user_email: "victor@victorprocure.co"
     access_token:
-        secure: 2d7794f49ac54c21eed1fbfafbc9f23ed9c38bcc4006fb16b358985c7e279396
+        secure: 171ceed961fdc89ac9c9e97546bfed2341f4f6d3
 
 image: Visual Studio 2019
 init:
-  # Good practise, because Windows line endings are different from Unix/Linux ones
-- cmd: git config --global core.autocrlf true
+    - cmd: git config --global core.autocrlf true
 
 before_build:
     - ps: |
